add more rk3399 devices

--- a/projects/Rockchip/devices/RK3399/linux/rockchip-4.4/linux.aarch64.conf
+++ b/projects/Rockchip/devices/RK3399/linux/rockchip-4.4/linux.aarch64.conf
@@ -375,10 +375,10 @@ CONFIG_PCI_LABEL=y
 CONFIG_PCIE_ROCKCHIP=y
 CONFIG_PCIEPORTBUS=y
 CONFIG_PCIEAER=y
-# CONFIG_PCIE_ECRC is not set
-# CONFIG_PCIEAER_INJECT is not set
+CONFIG_PCIE_ECRC=y
+CONFIG_PCIEAER_INJECT=y
 CONFIG_PCIEASPM=y
-# CONFIG_PCIEASPM_DEBUG is not set
+CONFIG_PCIEASPM_DEBUG=y
 # CONFIG_PCIEASPM_DEFAULT is not set
 CONFIG_PCIEASPM_POWERSAVE=y
 # CONFIG_PCIEASPM_PERFORMANCE is not set
@@ -418,10 +418,10 @@ CONFIG_HOTPLUG_CPU=y
 CONFIG_PREEMPT_VOLUNTARY=y
 # CONFIG_PREEMPT is not set
 # CONFIG_HZ_100 is not set
-# CONFIG_HZ_250 is not set
-CONFIG_HZ_300=y
+CONFIG_HZ_250=y
+# CONFIG_HZ_300 is not set
 # CONFIG_HZ_1000 is not set
-CONFIG_HZ=300
+CONFIG_HZ=250
 CONFIG_SCHED_HRTICK=y
 CONFIG_ARCH_SUPPORTS_DEBUG_PAGEALLOC=y
 CONFIG_ARCH_HAS_HOLES_MEMORYMODEL=y
@@ -563,7 +563,7 @@ CONFIG_ARM_CPUIDLE=y
 CONFIG_CPU_FREQ=y
 CONFIG_CPU_FREQ_GOV_COMMON=y
 CONFIG_CPU_FREQ_STAT=y
-# CONFIG_CPU_FREQ_STAT_DETAILS is not set
+CONFIG_CPU_FREQ_STAT_DETAILS=y
 CONFIG_CPU_FREQ_TIMES=y
 # CONFIG_CPU_FREQ_DEFAULT_GOV_PERFORMANCE is not set
 # CONFIG_CPU_FREQ_DEFAULT_GOV_POWERSAVE is not set
@@ -1418,6 +1418,7 @@ CONFIG_OF=y
 # CONFIG_OF_UNITTEST is not set
 CONFIG_OF_FLATTREE=y
 CONFIG_OF_EARLY_FLATTREE=y
+CONFIG_OF_DYNAMIC=y
 CONFIG_OF_ADDRESS=y
 CONFIG_OF_ADDRESS_PCI=y
 CONFIG_OF_IRQ=y
@@ -3542,9 +3543,10 @@ CONFIG_DRM_MIPI_DSI=y
 CONFIG_DRM_KMS_HELPER=y
 CONFIG_DRM_KMS_FB_HELPER=y
 CONFIG_DRM_FBDEV_EMULATION=y
-# CONFIG_DRM_LOAD_EDID_FIRMWARE is not set
+CONFIG_DRM_LOAD_EDID_FIRMWARE=y
+# CONFIG_DRM_DP_CEC is not set
 # CONFIG_DRM_SCDC_HELPER is not set
-# CONFIG_DRM_DMA_SYNC is not set
+CONFIG_DRM_DMA_SYNC=y
 
 #
 # I2C encoder or helper chips
@@ -3572,8 +3574,8 @@ CONFIG_ROCKCHIP_ANALOGIX_DP=y
 CONFIG_ROCKCHIP_INNO_HDMI=y
 CONFIG_ROCKCHIP_LVDS=y
 CONFIG_ROCKCHIP_DRM_TVE=y
-# CONFIG_ROCKCHIP_RGB is not set
-# CONFIG_ROCKCHIP_DRM_BACKLIGHT is not set
+CONFIG_ROCKCHIP_RGB=y
+CONFIG_ROCKCHIP_DRM_BACKLIGHT=y
 # CONFIG_ROCKCHIP_RK3066_HDMI is not set
 CONFIG_DRM_UDL=m
 # CONFIG_DRM_AST is not set
@@ -3614,9 +3616,9 @@ CONFIG_DRM_DW_HDMI_CEC=y
 # CONFIG_MALI400 is not set
 CONFIG_MALI_DEVFREQ=y
 CONFIG_MALI_MIDGARD=m
-# CONFIG_MALI_GATOR_SUPPORT is not set
-# CONFIG_MALI_MIDGARD_ENABLE_TRACE is not set
-# CONFIG_MALI_DMA_FENCE is not set
+CONFIG_MALI_GATOR_SUPPORT=y
+CONFIG_MALI_MIDGARD_ENABLE_TRACE=y
+CONFIG_MALI_DMA_FENCE=y
 CONFIG_MALI_EXPERT=y
 # CONFIG_MALI_CORESTACK is not set
 # CONFIG_MALI_PRFCNT_SET_SECONDARY is not set
@@ -3734,7 +3736,7 @@ CONFIG_LCD_GENERAL=y
 #
 # RGA2
 #
-# CONFIG_ROCKCHIP_RGA2 is not set
+CONFIG_ROCKCHIP_RGA2=y
 
 #
 # VCODEC
@@ -3772,7 +3774,8 @@ CONFIG_FRAMEBUFFER_CONSOLE_DETECT_PRIMARY=y
 # CONFIG_FRAMEBUFFER_CONSOLE_ROTATION is not set
 # CONFIG_LOGO is not set
 CONFIG_SOUND=y
-# CONFIG_SOUND_OSS_CORE is not set
+CONFIG_SOUND_OSS_CORE=y
+CONFIG_SOUND_OSS_CORE_PRECLAIM=y
 CONFIG_SND=y
 CONFIG_SND_TIMER=y
 CONFIG_SND_PCM=y
@@ -3803,6 +3806,7 @@ CONFIG_SND_RAWMIDI_SEQ=m
 # CONFIG_SND_OPL4_LIB_SEQ is not set
 # CONFIG_SND_SBAWE_SEQ is not set
 # CONFIG_SND_EMU10K1_SEQ is not set
+CONFIG_SND_AC97_CODEC=m
 CONFIG_SND_DRIVERS=y
 CONFIG_SND_DUMMY=m
 CONFIG_SND_ALOOP=m
@@ -3850,7 +3854,7 @@ CONFIG_SND_SOC_GENERIC_DMAENGINE_PCM=y
 CONFIG_SND_SOC_ROCKCHIP=y
 # CONFIG_SND_SOC_ROCKCHIP_FORCE_SRAM is not set
 CONFIG_SND_SOC_ROCKCHIP_I2S=y
-# CONFIG_SND_SOC_ROCKCHIP_I2S_TDM is not set
+CONFIG_SND_SOC_ROCKCHIP_I2S_TDM=m
 # CONFIG_SND_SOC_ROCKCHIP_MULTI_DAIS is not set
 # CONFIG_SND_SOC_ROCKCHIP_PDM is not set
 CONFIG_SND_SOC_ROCKCHIP_SPDIF=y
@@ -3898,8 +3902,8 @@ CONFIG_SND_SOC_I2C_AND_SPI=y
 # CONFIG_SND_SOC_CX20810 is not set
 # CONFIG_SND_SOC_DUMMY_CODEC is not set
 # CONFIG_SND_SOC_BT_SCO is not set
-CONFIG_SND_SOC_ES8316=m
-# CONFIG_SND_SOC_ES8323 is not set
+CONFIG_SND_SOC_ES8316=y
+CONFIG_SND_SOC_ES8323=y
 CONFIG_SND_SOC_HDMI_CODEC=y
 # CONFIG_SND_SOC_ES8328 is not set
 # CONFIG_SND_SOC_ES8328_I2C is not set
@@ -3962,7 +3966,8 @@ CONFIG_SND_SOC_TS3A227E=m
 # CONFIG_SND_SOC_WM8978 is not set
 # CONFIG_SND_SOC_TPA6130A2 is not set
 CONFIG_SND_SIMPLE_CARD=y
-# CONFIG_SOUND_PRIME is not set
+CONFIG_SOUND_PRIME=y
+CONFIG_AC97_BUS=m
 
 #
 # HID support
@@ -4894,12 +4899,12 @@ CONFIG_ROCKCHIP_IOMMU=y
 #
 # CPU selection
 #
-# CONFIG_CPU_PX30 is not set
+CONFIG_CPU_PX30=y
 # CONFIG_CPU_RK1808 is not set
 # CONFIG_CPU_RK3308 is not set
-# CONFIG_CPU_RK3328 is not set
+CONFIG_CPU_RK3328=y
 # CONFIG_CPU_RK3366 is not set
-# CONFIG_CPU_RK3368 is not set
+CONFIG_CPU_RK3368=y
 CONFIG_CPU_RK3399=y
 CONFIG_ANDROID_VERSION=0x07010000
 CONFIG_ROCKCHIP_CPUINFO=y
@@ -5204,7 +5209,8 @@ CONFIG_PHY_ROCKCHIP_INNO_USB2=y
 CONFIG_PHY_ROCKCHIP_INNO_USB3=y
 CONFIG_PHY_ROCKCHIP_EMMC=y
 CONFIG_PHY_ROCKCHIP_DP=y
-# CONFIG_PHY_ROCKCHIP_INNO_MIPI_DPHY is not set
+# CONFIG_PHY_ROCKCHIP_MIPI_RX is not set
+CONFIG_PHY_ROCKCHIP_INNO_MIPI_DPHY=m
 CONFIG_PHY_ROCKCHIP_INNO_HDMI_PHY=y
 # CONFIG_PHY_ROCKCHIP_INNO_VIDEO_PHY is not set
 # CONFIG_PHY_ROCKCHIP_INNO_VIDEO_COMBO_PHY is not set
