Update Linux to 4.4.197

--- a/projects/Rockchip/devices/RK3399/linux/rockchip-4.4/linux.aarch64.conf
+++ b/projects/Rockchip/devices/RK3399/linux/rockchip-4.4/linux.aarch64.conf
@@ -160,6 +160,7 @@ CONFIG_RD_GZIP=y
 CONFIG_RD_XZ=y
 # CONFIG_RD_LZO is not set
 # CONFIG_RD_LZ4 is not set
+# CONFIG_INITRD_ASYNC is not set
 # CONFIG_CC_OPTIMIZE_FOR_PERFORMANCE is not set
 CONFIG_CC_OPTIMIZE_FOR_SIZE=y
 CONFIG_SYSCTL=y
@@ -1354,6 +1355,8 @@ CONFIG_RFKILL_GPIO=y
 # CONFIG_NET_9P is not set
 # CONFIG_CAIF is not set
 # CONFIG_CEPH_LIB is not set
+# CONFIG_CEPH_LIB_PRETTYDEBUG is not set
+# CONFIG_CEPH_LIB_USE_DNS_RESOLVER is not set
 # CONFIG_NFC is not set
 # CONFIG_LWTUNNEL is not set
 CONFIG_DST_CACHE=y
@@ -2094,6 +2097,7 @@ CONFIG_USB_NET_RNDIS_WLAN=y
 CONFIG_RTL8187=m
 CONFIG_RTL8187_LEDS=y
 # CONFIG_MAC80211_HWSIM is not set
+# CONFIG_VIRT_WIFI is not set
 # CONFIG_MWL8K is not set
 # CONFIG_ATH_CARDS is not set
 # CONFIG_B43 is not set
@@ -2137,6 +2141,7 @@ CONFIG_RT2X00_LIB=m
 CONFIG_RT2X00_LIB_FIRMWARE=y
 CONFIG_RT2X00_LIB_CRYPTO=y
 CONFIG_RT2X00_LIB_LEDS=y
+# CONFIG_RT2X00_LIB_DEBUGFS is not set
 # CONFIG_RT2X00_DEBUG is not set
 # CONFIG_WL_MEDIATEK is not set
 # CONFIG_RTL_CARDS is not set
@@ -2169,6 +2174,12 @@ CONFIG_ZD1211RW=m
 # CONFIG_MWIFIEX is not set
 # CONFIG_CW1200 is not set
 # CONFIG_RSI_91X is not set
+
+#
+# Rockchip LTE support
+#
+
+# CONFIG_LTE is not set
 
 #
 # WiMAX Wireless Broadband devices
@@ -2303,6 +2314,7 @@ CONFIG_TOUCHSCREEN_EGALAX=m
 # CONFIG_TOUCHSCREEN_FT6236 is not set
 # CONFIG_TOUCHSCREEN_FUJITSU is not set
 # CONFIG_TOUCHSCREEN_GOODIX is not set
+# CONFIG_TOUCHSCREEN_GSLX6801 is not set
 # CONFIG_TOUCHSCREEN_GSLX680A is not set
 # CONFIG_TOUCHSCREEN_GSLX680_D708 is not set
 # CONFIG_TOUCHSCREEN_GSLX680_PAD is not set
@@ -2493,6 +2505,7 @@ CONFIG_DEVPTS_MULTIPLE_INSTANCES=y
 # CONFIG_NOZOMI is not set
 # CONFIG_N_GSM is not set
 # CONFIG_TRACE_SINK is not set
+CONFIG_LDISC_AUTOLOAD=y
 CONFIG_DEVMEM=y
 # CONFIG_DEVKMEM is not set
 
@@ -2750,6 +2763,7 @@ CONFIG_GPIO_GENERIC_PLATFORM=y
 # MFD GPIO expanders
 #
 CONFIG_GPIO_RK8XX=y
+# CONFIG_GPIO_TPS6586X is not set
 
 #
 # PCI GPIO expanders
@@ -3257,6 +3271,8 @@ CONFIG_USB_VIDEO_CLASS_INPUT_EVDEV=y
 # CONFIG_USB_S2255 is not set
 CONFIG_VIDEO_USBTV=m
 
+# CONFIG_NPU_USB_ACM is not set
+
 #
 # Analog TV USB devices
 #
@@ -3324,6 +3340,8 @@ CONFIG_DVB_USB_DVBSKY=m
 # Webcam, TV (analog/digital) USB devices
 #
 # CONFIG_VIDEO_EM28XX is not set
+# CONFIG_USB_PULSE8_CEC is not set
+# CONFIG_USB_RAINSHADOW_CEC is not set
 CONFIG_MEDIA_PCI_SUPPORT=y
 
 #
@@ -3694,6 +3712,8 @@ CONFIG_DRM_DW_HDMI_CEC=y
 # CONFIG_POWERVR_ROGUE_M is not set
 # CONFIG_MALI400 is not set
 CONFIG_MALI_DEVFREQ=y
+CONFIG_MALI_MIDGARD_FOR_ANDROID=y
+# CONFIG_MALI_MIDGARD_FOR_LINUX is not set
 CONFIG_MALI_MIDGARD=m
 CONFIG_MALI_GATOR_SUPPORT=y
 CONFIG_MALI_MIDGARD_ENABLE_TRACE=y
@@ -4436,6 +4456,7 @@ CONFIG_USB_CONFIGFS_F_FS=y
 # CONFIG_USB_CONFIGFS_F_ACC is not set
 CONFIG_USB_CONFIGFS_UEVENT=y
 # CONFIG_USB_CONFIGFS_F_UAC1 is not set
+# CONFIG_USB_CONFIGFS_F_UAC1_LEGACY is not set
 # CONFIG_USB_CONFIGFS_F_UAC2 is not set
 # CONFIG_USB_CONFIGFS_F_MIDI is not set
 # CONFIG_USB_CONFIGFS_F_HID is not set
@@ -4565,7 +4586,8 @@ CONFIG_LEDS_TRIGGER_DEFAULT_ON=y
 CONFIG_LEDS_TRIGGER_TRANSIENT=m
 CONFIG_LEDS_TRIGGER_CAMERA=m
 # CONFIG_LEDS_TRIGGER_MULTI_CTRL is not set
-CONFIG_SWITCH=y
+CONFIG_SWITCH=m
+CONFIG_SWITCH_GPIO=m
 # CONFIG_ACCESSIBILITY is not set
 # CONFIG_INFINIBAND is not set
 CONFIG_EDAC_SUPPORT=y
@@ -4615,6 +4637,7 @@ CONFIG_RTC_DRV_PCF8583=m
 CONFIG_RTC_DRV_M41T80=m
 # CONFIG_RTC_DRV_M41T80_WDT is not set
 CONFIG_RTC_DRV_BQ32K=m
+CONFIG_RTC_DRV_TPS6586X=m
 CONFIG_RTC_DRV_S35390A=m
 CONFIG_RTC_DRV_FM3130=m
 CONFIG_RTC_DRV_RX8581=m
@@ -4671,6 +4694,7 @@ CONFIG_RTC_DRV_PCF2123=m
 # HID Sensor RTC drivers
 #
 # CONFIG_RTC_DRV_HID_SENSOR_TIME is not set
+# CONFIG_COMMON_CLK_DEBUGFS is not set
 CONFIG_DMADEVICES=y
 # CONFIG_DMADEVICES_DEBUG is not set
 
@@ -4995,6 +5019,8 @@ CONFIG_ROCKCHIP_GRF=y
 CONFIG_ROCKCHIP_PM_DOMAINS=y
 CONFIG_ROCKCHIP_PVTM=y
 CONFIG_ROCKCHIP_SUSPEND_MODE=y
+CONFIG_ROCKCHIP_SYSTEM_MONITOR=y
+# CONFIG_ROCKCHIP_VENDOR_STORAGE_UPDATE_LOADER is not set
 # CONFIG_SUNXI_SRAM is not set
 # CONFIG_SOC_TI is not set
 CONFIG_MACH_NANOPI4=y
@@ -5488,6 +5514,7 @@ CONFIG_HFSPLUS_FS=m
 # CONFIG_BEFS_FS is not set
 # CONFIG_BFS_FS is not set
 # CONFIG_EFS_FS is not set
+# CONFIG_JFFS2_FS is not set
 # CONFIG_LOGFS is not set
 # CONFIG_CRAMFS is not set
 CONFIG_SQUASHFS=y
@@ -5671,6 +5698,7 @@ CONFIG_DEBUG_KERNEL=y
 # CONFIG_PAGE_EXTENSION is not set
 # CONFIG_DEBUG_PAGEALLOC is not set
 # CONFIG_DEBUG_OBJECTS is not set
+# CONFIG_SLUB_SYSFS is not set
 # CONFIG_SLUB_DEBUG_ON is not set
 # CONFIG_SLUB_STATS is not set
 CONFIG_HAVE_DEBUG_KMEMLEAK=y
@@ -5799,6 +5827,7 @@ CONFIG_TRACING_EVENTS_GPIO=y
 # CONFIG_TEST_KSTRTOX is not set
 # CONFIG_TEST_PRINTF is not set
 # CONFIG_TEST_RHASHTABLE is not set
+CONFIG_TEST_HASH=m
 # CONFIG_DMA_API_DEBUG is not set
 # CONFIG_TEST_LKM is not set
 # CONFIG_TEST_USER_COPY is not set
@@ -6010,6 +6039,8 @@ CONFIG_CRYPTO_USER_API_AEAD=m
 CONFIG_CRYPTO_HASH_INFO=y
 CONFIG_CRYPTO_HW=y
 # CONFIG_CRYPTO_DEV_CCP is not set
+# CONFIG_CRYPTO_DEV_ROCKCHIP_V1 is not set
+# CONFIG_CRYPTO_DEV_ROCKCHIP_V2 is not set
 CONFIG_ASYMMETRIC_KEY_TYPE=y
 CONFIG_ASYMMETRIC_PUBLIC_KEY_SUBTYPE=y
 CONFIG_PUBLIC_KEY_ALGO_RSA=y
