--- a/projects/Rockchip/devices/RK3399/linux/rockchip-4.4/linux.aarch64.conf
+++ b/projects/Rockchip/devices/RK3399/linux/rockchip-4.4/linux.aarch64.conf
@@ -370,7 +370,7 @@ CONFIG_PCI_MSI_IRQ_DOMAIN=y
 # CONFIG_PCI_HISI is not set
 CONFIG_PCIE_ROCKCHIP=y
 CONFIG_PCIEPORTBUS=y
-CONFIG_PCIEAER=y
+# CONFIG_PCIEAER is not set
 # CONFIG_PCIE_ECRC is not set
 # CONFIG_PCIEAER_INJECT is not set
 CONFIG_PCIEASPM=y
