--- a/projects/Rockchip/filesystem/usr/share/alsa/cards/HDMI.conf
+++ b/projects/Rockchip/filesystem/usr/share/alsa/cards/HDMI.conf
@@ -23,38 +23,9 @@ HDMI.pcm.hdmi.0 {
 			{
 				interface MIXER
 				name "IEC958 Playback Default"
-				device 0
 				lock true
 				preserve true
-				value [ $AES0 $AES1 $AES2 $AES3 ]
-			}
-		]
-	}
-	hint.device 0
-}
-
-HDMI.pcm.hdmi.1 {
-	@args [ CARD AES0 AES1 AES2 AES3 ]
-	@args.CARD { type string }
-	@args.AES0 { type integer }
-	@args.AES1 { type integer }
-	@args.AES2 { type integer }
-	@args.AES3 { type integer }
-	type hooks
-	slave.pcm {
-		type hw
-		card $CARD
-		device 1
-	}
-	hooks.0 {
-		type ctl_elems
-		hook_args [
-			{
-				interface MIXER
-				name "IEC958 Playback Default"
-				device 1
-				lock true
-				preserve true
+				optional true
 				value [ $AES0 $AES1 $AES2 $AES3 ]
 			}
 		]
