--- a/projects/Rockchip/devices/RK3399/linux/rockchip-4.4/linux.aarch64.conf
+++ b/projects/Rockchip/devices/RK3399/linux/rockchip-4.4/linux.aarch64.conf
@@ -3593,6 +3593,7 @@ CONFIG_MEDIA_PCI_SUPPORT=y
 # CONFIG_DVB_SMIPCIE is not set
 # CONFIG_DVB_NETUP_UNIDVB is not set
 # CONFIG_V4L_PLATFORM_DRIVERS is not set
+# CONFIG_VIDEO_ROCKCHIP_USBACM_CONTROL is not set
 # CONFIG_V4L_MEM2MEM_DRIVERS is not set
 # CONFIG_V4L_TEST_DRIVERS is not set
 # CONFIG_DVB_PLATFORM_DRIVERS is not set
@@ -3841,6 +3842,7 @@ CONFIG_DVB_ASCOT2E=m
 #
 # CONFIG_VGA_ARB is not set
 # CONFIG_VIDEO_VM149C is not set
+# CONFIG_VIDEO_NVP6324 is not set
 CONFIG_DRM=y
 CONFIG_DRM_IGNORE_IOTCL_PERMIT=y
 CONFIG_DRM_MIPI_DSI=y
