--- a/projects/Rockchip/devices/RK3399/linux/rockchip-4.4/linux.aarch64.conf
+++ b/projects/Rockchip/devices/RK3399/linux/rockchip-4.4/linux.aarch64.conf
@@ -91,7 +91,7 @@ CONFIG_NO_HZ_IDLE=y
 # CONFIG_NO_HZ_FULL is not set
 CONFIG_NO_HZ=y
 CONFIG_HIGH_RES_TIMERS=y
-
+#
 #
 # CPU/Task time and stats accounting
 #
@@ -131,6 +131,7 @@ CONFIG_MEMCG=y
 # CONFIG_MEMCG_SWAP is not set
 # CONFIG_MEMCG_KMEM is not set
 # CONFIG_CGROUP_PERF is not set
+# CONFIG_CGROUP_HUGETLB is not set
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_CFS_BANDWIDTH=y
@@ -4696,7 +4697,7 @@ CONFIG_USB_CONFIGFS_F_UAC1=y
 CONFIG_USB_CONFIGFS_F_UAC2=y
 CONFIG_USB_CONFIGFS_F_MIDI=y
 CONFIG_USB_CONFIGFS_F_HID=y
-CONFIG_USB_CONFIGFS_F_UVC=y
+# CONFIG_USB_CONFIGFS_F_UVC is not set
 CONFIG_USB_CONFIGFS_F_UVC_ROCKCHIP=y
 CONFIG_USB_CONFIGFS_F_PRINTER=y
 # CONFIG_USB_ZERO is not set
