--- a/projects/Rockchip/devices/RK3399/linux/rockchip-4.4/linux.aarch64.conf
+++ b/projects/Rockchip/devices/RK3399/linux/rockchip-4.4/linux.aarch64.conf
@@ -2344,6 +2344,9 @@ CONFIG_RTL8723BS=m
 # CONFIG_RTL8822BE is not set
 # CONFIG_MVL88W8977 is not set
 
+# CONFIG_LTE is not set
+# CONFIG_LTE_RM310 is not set
+
 #
 # SouthSV 6XXX WLAN support
 #
