--- a/projects/Rockchip/devices/RK3399/linux/rockchip-4.4/linux.aarch64.conf
+++ b/projects/Rockchip/devices/RK3399/linux/rockchip-4.4/linux.aarch64.conf
@@ -129,9 +129,9 @@ CONFIG_CGROUP_CPUACCT=y
 CONFIG_PAGE_COUNTER=y
 CONFIG_MEMCG=y
 # CONFIG_MEMCG_SWAP is not set
-# CONFIG_MEMCG_KMEM is not set
-# CONFIG_CGROUP_PERF is not set
-# CONFIG_CGROUP_HUGETLB is not set
+CONFIG_MEMCG_KMEM=y
+CONFIG_CGROUP_PERF=y
+CONFIG_CGROUP_HUGETLB=y
 CONFIG_CGROUP_SCHED=y
 CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_CFS_BANDWIDTH=y
@@ -2136,6 +2136,7 @@ CONFIG_PHYLIB=y
 # CONFIG_VITESSE_PHY is not set
 # CONFIG_TERANETICS_PHY is not set
 CONFIG_ROCKCHIP_PHY=y
+CONFIG_REALTEK_PHY=y
 # CONFIG_SMSC_PHY is not set
 # CONFIG_BROADCOM_PHY is not set
 # CONFIG_BCM7XXX_PHY is not set
